# voice-hub

./: .dockerignore  .env.example  .gitignore  AGENTS.md  DEPLOY.md  ISSUES.md  LICENSE  NOTICE  README.md  ROADMAP.md  SIMPLIFICATION_PLAN.md  TAURI_WINDOWS_BUILD_PLAN.md  UPDATER.md  V020_PLAN.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: README.md  auto-tag-desktop.yml  build.yml  deploy.yml  release-desktop.yml
backend/: Dockerfile  go.mod  go.sum
backend/cmd/loadtest/: main.go
backend/cmd/server/: auth_test.go  main.go
backend/internal/auth/: connpass.go  genpass.go  limiter.go  limiter_test.go  request.go  secrets.go  session.go  session_test.go  ws_registry.go  ws_registry_test.go
backend/internal/config/: config.go  config_test.go  proxies_test.go  validate.go  validate_test.go
backend/internal/handler/: handler.go
backend/internal/middleware/: middleware.go  middleware_test.go
backend/internal/presence/: presence.go  presence_test.go
backend/internal/sfu/: chain_tracker.go  chain_tracker_test.go  chat_test.go  (+14 more)
deploy/: Caddyfile  caddy.Dockerfile  server-bootstrap.sh
deploy/janus/: Dockerfile  entrypoint.sh  janus.jcfg  janus.plugin.videoroom.jcfg  janus.transport.websockets.jcfg
frontend/: connect.html  eslint.config.js  index.html  login.html  package-lock.json  package.json  tsconfig.json  tsconfig.test.json  vite.config.ts
frontend/scripts/: build-dtln-worklet.mjs  bundle-dfn3.mjs  bundle-rnnoise-v2.mjs  extract-dfn3-worklet.mjs
frontend/src/: App.tsx  Connect.tsx  Login.tsx  config.ts  connect-entry.tsx  ipc.test.ts  ipc.ts  login-entry.tsx  main.tsx  rooms.ts  types.ts  vendor.d.ts
src-tauri/: Cargo.toml  installer.nsh  keymap.json  mousemap.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/permissions/: attention.toml  connection.toml  shortcut.toml  updater.toml
src-tauri/src/: commands.rs  connection.rs  lib.rs  listener.rs  main.rs  shortcut.rs  taskbar_icon.rs  tray.rs  tray_flash.rs  updater.rs
src-tauri/testdata/: binding-keyboard-modifiers.json  binding-keyboard-plain.json  binding-mouse.json
web/: app.js  index.html  login.html  login.js  sfu-client.js
web/assets/: client-BcnoSzQY.js  login-De1lCWxU.js  login-Dxc8cZdW.css  main-Dxvagtls.css  main-hjn4m4Z1.js
(+137 files in other folders)
