[package]
name = "voice-hub-desktop"
version = "0.2.8"
edition = "2021"
description = "Desktop shell for Voice Hub built with Tauri"

[lib]
name = "voice_hub_desktop_lib"
crate-type = ["cdylib", "rlib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tokio = { version = "1", features = ["time"] }
rdev = "0.5"
