[package]
name = "voice-hub-desktop"
version = "0.3.26"
edition = "2021"
description = "Desktop shell for Voice Hub built with Tauri"

[lib]
name = "voice_hub_desktop_lib"
crate-type = ["cdylib", "rlib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["tray-icon", "devtools"] }
tauri-plugin-log = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-opener = "2"
tokio = { version = "1", features = ["time"] }
rdev = "0.5"
keyring = { version = "3", features = ["windows-native", "apple-native", "linux-native"] }
url = "2"
png = "0.18"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging"] }
